[metadata]
name = guess_testing
author = Uriya Harpeness
author_email = uriya1998@gmail.com
description = A tool for making coverage and edge cases seeking easier.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/UriyaHarpeness/guess-testing
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development
    Typing :: Typed
python_requires = >=3.7

[options]
packages = find:

install_requires =

[options.entry_points]
console_scripts =
    guess-testing = guess_testing.cli:cli
    gstst = guess_testing.cli:cli

[options.packages.find]
include =
    guess_testing
    guess_testing.*
