[metadata]
name = guess_testing
author = Uriya Harpeness
author_email = uriya1998@gmail.com
description = A tool for making coverage and edge cases seeking easier.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/UriyaHarpeness/guess-testing
license = MIT License
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Testing
    Typing :: Typed
python_requires = >=3.7

[options]
packages = find:

install_requires =

[options.extras_require]
pretty =
    rich
    rich_click

[options.entry_points]
console_scripts =
    guess-testing = guess_testing.cli:cli
    gstst = guess_testing.cli:cli

[options.packages.find]
include =
    guess_testing
    guess_testing.*
